--- a/RainningkeyProgram/RainningkeyProgram.csproj
+++ b/RainningkeyProgram/RainningkeyProgram.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="19.225.1" />
+  </ItemGroup>
+
 </Project>
